--- a/index.html
+++ b/index.html
@@ -24,36 +24,57 @@
         <div class="card mb-4">
             <div class="card-header bg-primary text-white">Leave Application Form</div>
             <div class="card-body">
-                <form>
+                <form class="needs-validation" novalidate>
                     <div class="mb-3">
                         <label for="employeeName" class="form-label">Employee Name</label>
-                        <input type="text" class="form-control" id="employeeName" placeholder="Enter your name">
+                        <input type="text" class="form-control" id="employeeName" placeholder="Enter your name" required>
+                        <div class="invalid-feedback">Please enter your name.</div>
                     </div>
                     <div class="mb-3">
                         <label for="leaveType" class="form-label">Leave Type</label>
-                        <select class="form-select" id="leaveType">
-                            <option selected>Choose...</option>
+                        <select class="form-select" id="leaveType" required>
+                            <option value="" selected disabled>Choose...</option>
                             <option value="casual">Casual Leave</option>
                             <option value="sick">Sick Leave</option>
                             <option value="earned">Earned Leave</option>
                         </select>
+                        <div class="invalid-feedback">Please select a leave type.</div>
                     </div>
                     <div class="row mb-3">
                         <div class="col">
                             <label for="fromDate" class="form-label">From</label>
-                            <input type="date" class="form-control" id="fromDate">
+                            <input type="date" class="form-control" id="fromDate" required>
+                            <div class="invalid-feedback">Please select a start date.</div>
                         </div>
                         <div class="col">
                             <label for="toDate" class="form-label">To</label>
-                            <input type="date" class="form-control" id="toDate">
+                            <input type="date" class="form-control" id="toDate" required>
+                            <div class="invalid-feedback">Please select an end date.</div>
                         </div>
                     </div>
                     <div class="mb-3">
                         <label for="reason" class="form-label">Reason</label>
-                        <textarea class="form-control" id="reason" rows="2" placeholder="Enter reason for leave"></textarea>
+                        <textarea class="form-control" id="reason" rows="2" placeholder="Enter reason for leave" required></textarea>
+                        <div class="invalid-feedback">Please provide a reason for leave.</div>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
+                <script>
+                // Bootstrap validation
+                (() => {
+                  'use strict';
+                  const forms = document.querySelectorAll('.needs-validation');
+                  Array.from(forms).forEach(form => {
+                    form.addEventListener('submit', event => {
+                      if (!form.checkValidity()) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                      }
+                      form.classList.add('was-validated');
+                    }, false);
+                  });
+                })();
+                </script>
             </div>
         </div>
         <!-- Dummy Posts -->
